# Xray-for-HarmonyOS

./: .gitignore  README.md  build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
app/: build-profile.json5  oh-package.json5
app/src/main/: module.json5
app/src/main/cpp/: CMakeLists.txt  libapp.cpp  libxray.h
app/src/main/cpp/types/libapp/: Index.d.ts  oh-package.json5
app/src/main/ets/abilities/: AppAbility.ets  VpnAbility.ets
app/src/main/ets/components/: SettingsIcon.ets  TitleTextModifier.ets  VpnConnectButton.ets
app/src/main/ets/constant/: Tun.ets
app/src/main/ets/interfaces/: Inbound.ets
app/src/main/ets/managers/: InboundManager.ets  LogManager.ets  VpnManager.ets
app/src/main/ets/pages/launch/: LaunchPage.ets  LaunchPageViewModel.ets
app/src/main/ets/pages/main/: MainPage.ets
app/src/main/ets/pages/settings/: SettingsAssetPage.ets  SettingsInboundPage.ets  SettingsLogPage.ets
app/src/main/ets/utils/: fs.ets
app/src/main/resources/base/element/: color.json  string.json
app/src/main/resources/base/profile/: main_pages.json
